[package]
name = "pomodoro"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
rodio = "0.21.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.48.0", features = ["full"] }